plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.springdoc.openapi-gradle-plugin" version '1.8.0'
}

group = 'com.waither'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //Spring Cloud Config Server
    implementation 'org.springframework.cloud:spring-cloud-config-client:4.0.3'// Config Client
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.0.3'

//    //Spring Boot Actuator
//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//
//    //Spring Cloud Bus AMQP
//    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    //Webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.1.0'

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

openApi {
    apiDocsUrl.set("http://localhost:3000") // Document URL
    outputDir.set(file("$rootDir/docs")) // Build Result Path
    outputFileName.set("user.json") // Build Result File Name
    groupedApiMappings.set(Map.of("http://localhost:8080/user/api-docs", "user.json"))
    waitTimeInSeconds.set(60) // Timeout
    customBootRun {
        args.add("--spring.profiles.active=dev")
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
